--- a/resume.scss
+++ b/resume.scss
@@ -62,7 +62,7 @@ body {
 .header {
 	position: relative;
 	top: -0.8em;
-	margin-bottom: 2em;
+	margin-bottom: 3em;
 	& > * {
 		margin: 0em;
 	}
@@ -146,9 +146,20 @@ h2 {
 }
 
 @media (min-width: 450pt) and (max-width: 611pt) {
+	.header {
+		width: 32em;
+		margin-right: auto;
+		margin-left: auto;
+		h1 {
+			width: 200%;//Prevent overflow
+			margin-left: -50%;
+			text-align: center;
+		}
+	}
 	.header .contact {
 		position: absolute; // So it doesn't take up space
-		width: 200%; // Prevent overflow
+		padding-left: 0.2em;
+		width: 200%;//Prevent overflow
 		li {
 			position: static;
 			&:after { margin-left: 0.2em; }
