--- a/resume.css
+++ b/resume.css
@@ -1,8 +1,14 @@
+.unimportant {
+  display: none; }
+
 .notes {
   display: none; }
 
-@media (min-width: 300pt) {
+@media (min-width: 200pt) {
   .notes {
+    display: inline; } }
+@media (min-width: 300pt) {
+  .unimportant {
     display: inline; } }
 a {
   text-decoration: none;
