--- a/resume.scss
+++ b/resume.scss
@@ -151,7 +151,7 @@ h2 {
 	}
 }
 
-@media (min-width: 450pt) and (max-width: 611pt) {
+@media screen and (min-width: 450pt) and (max-width: 611pt) {
 	.header {
 		width: 32em;
 		margin-right: auto;
