--- a/resume.css
+++ b/resume.css
@@ -134,7 +134,7 @@ h2 {
   list-style: none;
   padding-left: 3em; }
   #skills ol > li {
-    margin: 0.5em 0px;
+    margin: 1em 0px;
     position: relative; }
     #skills ol > li:before {
       content: "B";
@@ -153,6 +153,16 @@ h2 {
       content: "A"; }
     #skills ol > li:last-child:before {
       content: "C"; }
+    #skills ol > li:after {
+      content: " ";
+      position: absolute;
+      top: -0.5em;
+      left: 0em;
+      right: 0em;
+      height: 0px;
+      border-bottom: 1px solid rgba(204, 204, 204, 0.5); }
+    #skills ol > li:first-child:after {
+      display: none; }
 
 @media screen and (min-width: 450pt) and (max-width: 611pt) {
   #header {
