--- a/resume.scss
+++ b/resume.scss
@@ -130,8 +130,8 @@ h2 {
 	& h2 {
 		margin-top: 1.5em;
 	}
-	& > *:first-child h2 { margin-top: 0em; }
 }
+#about > *:first-child h2 { margin-top: 0em; }
 #experience {
 	a {
 		text-decoration: underline;
@@ -268,6 +268,7 @@ h2 {
 		width: $expr-w;
 		float: right;
 		h2 { margin-top: 1em; }
+		& > *:first-child h2 { margin-top: 0em; }
 	}
 }
 
